# num_enum_simplified

./: Cargo.toml  LICENSE  README.md
num_enum/: Cargo.toml
num_enum/src/: lib.rs
num_enum/tests/: lib.rs
num_enum_derive/: Cargo.toml
num_enum_derive/src/: lib.rs
