[package]
name = "num_enum"
version = "0.4.2"  # Keep in sync with num_enum_derive.
authors = [
  "Daniel Wagner-Hall <dawagner@gmail.com>",
  "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
  "Hannes Karppila <hannes.karppila@gmail.com>",
]
description = "Procedural macros to make inter-operation between primitives and enums easier."
edition = "2018"
repository = "https://github.com/illicitonion/num_enum"
readme = "README.md"
keywords = ["enum", "conversion", "safe", "ffi", "derive"]
categories = ["rust-patterns"]
license = "BSD-3-Clause"

[features]
complex-expressions = ["num_enum_derive/complex-expressions"]

default = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
num_enum_derive = { version = "0.4.2", path = "../num_enum_derive", default-features = false }
