[package]
name = "num_enum_derive"
version = "0.4.2"  # Keep in sync with num_enum.
authors = [
  "Daniel Wagner-Hall <dawagner@gmail.com>",
  "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
  "Hannes Karppila <hannes.karppila@gmail.com>",
]
description = "Internal implementation details for ::num_enum (Procedural macros to make inter-operation between primitives and enums easier)"
edition = "2018"
repository = "https://github.com/illicitonion/num_enum"
keywords = []
categories = []
license = "BSD-3-Clause"

[lib]
proc-macro = true

[features]
complex-expressions = ["syn/full"]

default = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
